# banpei

./: .gitignore  .travis.yml  LICENSE  README.md  hotelling.py  pyproject.toml  setup.py
anomaly_detector/: __init__.py  hotelling.py
banpei/: __init__.py  hotelling.py  sst.py  utils.py
banpei/base/: __init__.py  model.py
demo/: sst_detect.py
demo/data/: abnormal_frequency.csv
tests/: test_hotelling.py  test_sst.py  test_utils.py
tests/test_data/: davis.csv  periodic_wave.csv
