[tool.poetry]
name = "banpei"
version = "0.1.0"
description = "Anomaly detection library with Python"
authors = ["Hirofumi Tsuruta"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
pandas = "^1.1.2"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
